--- a/app/views/bookings/reservation.html.erb
+++ b/app/views/bookings/reservation.html.erb
@@ -2,10 +2,10 @@
 <% @active_reservation = true %>
 <div class="container">
   <div class="row profile">
-    <div class="col-md-3">
+    <div class="col-md-3 profile-set">
       <%= render 'partials/user_side_bar' %>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 profile-set result">
       <div class="profile-content">
         <br>
         <br>
