--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,10 +4,10 @@
 <div class="container">
   <%= render 'partials/flashmessage' %>
   <div class="row profile">
-    <div class="col-md-3">
+    <div class="col-md-3 profile-set">
       <%= render 'partials/user_side_bar' %>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 profile-set">
       <div class="profile-content">
         <%= render "partials/past_booking" %>
       </div>
