feat(view): add toast notification
add toast notification

add oridinay text to show.html.erb

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -2,9 +2,8 @@
 <div id="booking">
   <div class="container">
     <div class="row">
-      <%= render 'partials/flashmessage' %>
 
-      <div class="col-md-5">
+      <div class="col-md-5 display-details">
         <div class="panel panel-primary">
           <div class="panel-heading"><%=@flight.airplane.airline.name%></div>
           <div class="panel-body">
@@ -20,7 +19,7 @@
       </div>
 
 
-      <div class="col-md-5">
+      <div class="col-md-5 display-details">
         <div class="panel panel-primary">
           <div class="panel-heading">
             Passenger Details
