--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,5 +1,6 @@
-.col-md-5.display-details.activate{
-  margin-top: -10%;
+.col-md-5.display-details{
+  margin-top: -6%;
+  margin-bottom: 10%;
 }
 .alert{
   margin-top: 10%;
