feat(manage booking): increas UX on find reservation page

--- a/app/views/bookings/find_reservation.js.erb
+++ b/app/views/bookings/find_reservation.js.erb
@@ -1,1 +1,4 @@
 $("#reserv-result").empty().append("<%= j render('partials/reservation_result') %>");
+$('html, body').animate({
+        scrollTop: $("#reserv-result").offset().top
+    }, 2000);
